Atualizações no projeto, adicionando o db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://${screenmatch_db_host}/${screenmatch_db_name}
+spring.datasource.username=${screenmatch_db_user}
+spring.datasource.password=${screenmatch_db_password}
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
+
+spring.jpa.hibernate.ddl-auto=update
