--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.username=${screenmatch_db_user}
 spring.datasource.password=${screenmatch_db_password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
 
 
 spring.jpa.hibernate.ddl-auto=update
