Atualizações no projeto, implementadno mais funções de pesquisa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://${screenmatch_db_host}/${screenmatch_db_
 spring.datasource.username=${screenmatch_db_user}
 spring.datasource.password=${screenmatch_db_password}
 spring.datasource.driver-class-name=org.postgresql.Driver
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
 
