--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/${DB_NAME:screenmatch}
-spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASSWORD:docker}
+spring.datasource.url=jdbc:postgresql://${screenmatch_db_host}/screenphrases
+spring.datasource.username=${screenmatch_db_user}
+spring.datasource.password=${screenmatch_db_password}
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
-omdb.apikey=${OMDB_APIKEY:YOUR_API_KEY}
-jwt.secret=${JWT_SECRET:minha-chave-secreta-super-segura-e-longa-para-testes}
