--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,37 @@
-spring.datasource.url=jdbc:postgresql://${screenmatch_db_host}/screenphrases
-spring.datasource.username=${screenmatch_db_user}
-spring.datasource.password=${screenmatch_db_password}
-spring.datasource.driver-class-name=org.postgresql.Driver
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Configuração do banco de dados (H2 para desenvolvimento)
+spring.datasource.url=jdbc:h2:mem:screenmatch
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
-spring.jpa.hibernate.ddl-auto=update
+
+# Carregar dados iniciais
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
+
+# JWT
+jwt.secret=minha-chave-secreta-super-segura-e-longa-para-desenvolvimento
+
+# OMDB API
+omdb.apikey=bc2427c2
+
+# Logging
+logging.level.br.com.alura.screenmatch=INFO
+
+# Configuração para PostgreSQL (descomente para produção)
+# spring.datasource.url=jdbc:postgresql://${screenmatch_db_host}/${screenmatch_db_name}
+# spring.datasource.username=${screenmatch_db_user}
+# spring.datasource.password=${screenmatch_db_password}
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.hibernate.ddl-auto=update
